--- a/assessment.html
+++ b/assessment.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>slowpoke-yadonが作ったあなたのいいところ診断</title>
+    <title>slowpoke-yadoが作ったあなたのいいところ診断</title>
     <link rel="stylesheet" href="assessment.css">
 </head>
 <body>
